Fix too much padding at top of screen

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -21,7 +21,7 @@ html, body {
 }
 
 body {
-	padding-top: 120px;
+	padding-top: 100px;
 }
 
 /* Sticky footer - Opera fix by http://www.cssstickyfooter.com */
@@ -211,7 +211,7 @@ body.popup_active {
 }
 #content {
 	overflow: auto;
-	padding: 20px 20px @FooterHeight 20px;
+	padding: 0 20px @FooterHeight 20px;
 	z-index: 2;
 
 	> h1:first-child {
@@ -845,7 +845,7 @@ body.popup_active {
 }
 #alphabetical_words {
 	margin-bottom: 600px;
-	margin-top: 20px;
+	margin-top: 60px;
 
 	h2 {
 		border-bottom: 1px solid #555;
